Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Device__c.object
<CustomObject>
    <fields>
        <fullName>Dealers__c</fullName>
        <label>Dealers</label>
        <picklist>
            <controllingField>Device_Type__c</controllingField>
            <picklistValues>
                <fullName>Staples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adishwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viveks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sangeetha</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <inlineHelpText>Please enter device ID</inlineHelpText>
        <label>Device ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Device Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>